--- a/style/style.css
+++ b/style/style.css
@@ -26,19 +26,6 @@ header style
     align-items: center;
 
 }
- /*.headar{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    align-items: center;
-    /* margin-top: 20px;
-    width: 1321px;
-    height: 633px;
-    padding: 20px;
-    background-color: black; */
-    /* border-radius: 30px;
-    color: white;
-}*/
 .header-info{
     width: 100%;
     padding: 20px;
@@ -156,7 +143,7 @@ all cards style
  footer style
  ------------------- */
  footer{
-    width: 100%px;
+    width: 100%;
     height: 444px;
     background-color: black;
     text-align: center;
@@ -218,10 +205,9 @@ all cards style
         width: 233px;
         height: 245px;
      }
-     .icon{
-        margin: 0;
-        padding: 0;
-        color: red;
+     .footer-text{
+        width: 200px;
+        margin-bottom: 20px;
      }
      h2{
         padding: 0;
