--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,16 @@ main {
 /* ------------
 header style 
 --------------- */
-
+@keyframes animations {
+    from {background-color: rgb(46, 40, 40);}
+    50%{
+        background-color: rgb(4, 165, 111);
+    }
+    75%{
+        background-color: greenyellow;
+    }
+    to {background-color: rgb(195, 195, 2);}
+  }
 .headar-section {
   margin-top: 20px;
   width: 1300px;
@@ -21,6 +30,13 @@ header style
   background-color: black;
   border-radius: 30px;
   color: white;
+ 
+}
+.headar-section:hover{
+    animation-name: animations;
+    animation-duration: 4s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
 }
 
 .header {
@@ -75,12 +91,62 @@ header style
   align-items: center;
   border-radius: 10px;
 }
+/* -------------------
+upcoming match style 
+---------------------- */
+#match-btn{
+    background-color: red;
+    color: white;
+    border: none;
+}
+#match-btn > a{
+    color: white;
+}
+#match-blog-btn{
+    background-color: white;
+
+}
+#match-blog-btn > a{
+    color: black;
+}
+
+       
+.match-cards{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 312px;
+    height: 242px;
+    border: 1px solid #E8E8E8;
+    border-radius: 10px;
+
+}
+.match-imgs{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.match-img > img{
+    width: 93px;
+    height: 58px;
+    padding: 20px;
+}
+.vs{
+    font-size: 16px;
+}
+.card-match-title{
+    font-size: 20px;
+    font-weight: 600;
+}
+.match-date{
+    font-size: 16px;
+}
 
 .aside-btn {
   width: 252px;
   height: 64px;
   margin: 30px;
-  font-weight: 500px;
   font-size: 20px;
   line-height: 30px;
   border-radius: 10px;
@@ -215,7 +281,7 @@ h2 {
  -------------------- */
 /* responsive for tablet  */
 
-@media only screen and (min-width: 577px) and (max-width: 768px) {
+@media only screen and (min-width: 481px) and (max-width: 768px) {
   .for-responsive {
     display: flex;
     flex-direction: column;
@@ -267,7 +333,7 @@ h2 {
   }
   .footer-section {
     grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
+    margin: 0;
   }
   .footer-text {
     margin: 10px;
@@ -275,12 +341,18 @@ h2 {
 }
 
 /* responsive for mobile  */
-@media only screen and (max-width: 576px) {
+@media only screen and (min-width:320px) and (max-width: 480px) {
   .cards-section,
   .right-aside,
   .header,
   .footer-section {
     grid-template-columns: 1fr;
+  }
+  .header-text{
+            width: 300px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
   }
   .left-aside {
     background-color: white;
